--- a/src/main/webapp/WEB-INF/templates/topbar.xhtml
+++ b/src/main/webapp/WEB-INF/templates/topbar.xhtml
@@ -1,108 +1,36 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:po="http://primefaces.org/roma">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:cc="http://xmlns.jcp.org/jsf/composite/components"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui" xmlns:n36="http://nivel36.es/ui"
+	xmlns:po="http://primefaces.org/roma">
 
-    <div class="layout-topbar">
+	<div class="layout-topbar">
 
-        <a class="layout-menu-button layout-topbar-icon" href="#">
-            <i class="pi pi-bars" />
-        </a>
+		<a class="layout-menu-button layout-topbar-icon" href="#"> <i
+			class="pi pi-bars" />
+		</a>
 
-        <h:link id="logo-link" outcome="/index" styleClass="layout-topbar-logo">
-            <p:graphicImage name="images/laie-logo.svg" library="roma-layout" />
-        </h:link>
+		<h:link id="logo-link" outcome="/index"
+			styleClass="layout-topbar-logo">
+			<p:graphicImage name="images/laie-logo.svg" library="roma-layout" />
 
-        <ul class="topbar-menu fadeInDown">
-            <ui:fragment rendered="#{true}">
-                <li class="user-profile">
-                    <a href="#">
-                        <p:graphicImage name="images/avatar/avatar.png" library="roma-layout" />
-                        <div class="layout-profile-userinfo">
-                            <span class="layout-profile-name">Arlene Welch</span>
-                            <span class="layout-profile-role">Design Ops</span>
-                        </div>
-                    </a>
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <i class="pi pi-user"></i>
-                                <span>Profile</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="pi pi-cog"></i>
-                                <span>Settings</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="pi pi-envelope"></i>
-                                <span>Messages</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="pi pi-bell"></i>
-                                <span>Notifications</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ui:fragment>
-            <li>
-                <a href="#" class="layout-topbar-icon">
-                    <i class="topbar-icon pi pi-bell"></i>
-                </a>
-                <ul>
-                    <li role="menuitem">
-                        <a href="#">
-                            <p:graphicImage name="images/avatar/avatar-1.png" library="roma-layout" />
-                            <div class="topbar-menu-info">
-                                <span class="topbar-menu-name">Bithika Abhedananda</span>
-                                <span class="topbar-menu-role">User interface review is done.</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li role="menuitem">
-                        <a href="#">
-                            <p:graphicImage name="images/avatar/avatar-2.png" library="roma-layout" />
-                            <div class="topbar-menu-info">
-                                <span class="topbar-menu-name">Dai Jiang</span>
-                                <span class="topbar-menu-role">Uh, we have sort of a problem here.</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li role="menuitem">
-                        <a href="#">
-                            <p:graphicImage name="images/avatar/avatar-3.png" library="roma-layout" />
-                            <div class="topbar-menu-info">
-                                <span class="topbar-menu-name">Karlien Nijhuis</span>
-                                <span class="topbar-menu-role">You apparently didn’t put the thing</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li role="menuitem">
-                        <a href="#">
-                            <p:graphicImage name="images/avatar/avatar-4.png" library="roma-layout" />
-                            <div class="topbar-menu-info">
-                                <span class="topbar-menu-name">Tom Chun</span>
-                                <span class="topbar-menu-role">Please check the files</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li role="menuitem">
-                        <a href="#">
-                            <p:graphicImage name="images/avatar/avatar-5.png" library="roma-layout" />
-                            <div class="topbar-menu-info">
-                                <span class="topbar-menu-name">Maria Trofimova</span>
-                                <span class="topbar-menu-role">Meeting reports attached.</span>
-                            </div>
-                            
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+		</h:link>
 
+		<div class="topbar-menu">
+			<h:form>
+				<p:commandLink id="dynaButton">
+					<cc:avatar value="#{sessionUser.user}" size="large" />
+					<div class="layout-profile-userinfo">
+						<span class="layout-profile-name">#{sessionUser.user}</span> <span
+							class="layout-profile-role">#{i18n['role.'.concat(sessionUser.user.role)]}</span>
+					</div>
+				</p:commandLink>
+				<p:menu overlay="true" trigger="dynaButton" my="left top" at="left bottom" styleClass="topbar-menu">
+					<p:menuitem value="#{i18n['login.logout']}" action="#{logoutView.logout}" />
+				</p:menu>
+			</h:form>
+		</div>
+	</div>
 </ui:composition>
