--- a/src/main/webapp/resources/components/users.xhtml
+++ b/src/main/webapp/resources/components/users.xhtml
@@ -9,7 +9,7 @@
 		<composite:attribute name="value" required="true" />
 		<composite:attribute name="styleClass" required="false" default="" />
 		<composite:attribute name="title" required="false" default="#{i18n['user.users']}" />
-		<composite:attribute name="rows" required="false" default="#{sessionUser.rowsPerPage}" />
+		<composite:attribute name="rows" required="false" default="15" />
 	</composite:interface>
 
 	<composite:implementation>
