--- a/src/main/webapp/resources/components/avatar.xhtml
+++ b/src/main/webapp/resources/components/avatar.xhtml
@@ -11,15 +11,25 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 	<composite:interface>
-		<composite:attribute name="value" type="es.nivel36.laie.user.UserDto" />
-		<composite:attribute name="styleClass" required="false" default="" />
-		<composite:attribute name="size" required="false" default="large" />
+		<composite:attribute name="value" 		required="true"		type="es.nivel36.laie.user.UserDto"	/>
+		<composite:attribute name="styleClass" 	required="false" 	default="" 							/>
+		<composite:attribute name="size" 		required="false" 	default="large" 					/>
 	</composite:interface>
 
 	<composite:implementation>
-		<p:avatar label="#{cc.attrs.value}" styleClass="#{cc.attrs.styleClass}" size="#{cc.attrs.size}" shape="circle" rendered="#{empty cc.attrs.value.image}" />
-        <p:avatar styleClass="#{cc.attrs.styleClass}" size="#{cc.attrs.size}" shape="circle" rendered="#{not empty cc.attrs.value.image}">
+		<p:avatar 	label="#{cc.attrs.value}" 
+					styleClass="#{cc.attrs.styleClass}" 
+					size="#{cc.attrs.size}" 
+					shape="circle" 
+					rendered="#{empty cc.attrs.value.image}" />
+					
+        <p:avatar	styleClass="#{cc.attrs.styleClass}" 
+        			size="#{cc.attrs.size}" 
+        			shape="circle" 
+        			rendered="#{not empty cc.attrs.value.image}">
+        			
 			<p:graphicImage value="/images/#{cc.attrs.value.image}" />
+			
         </p:avatar>
 	</composite:implementation>
 </ui:component>
