--- a/src/main/sass/overrides/_layout_styles.scss
+++ b/src/main/sass/overrides/_layout_styles.scss
@@ -58,6 +58,35 @@
 	}
 }
 
+.input-avatar {
+	position: relative;
+	height: 200px;
+	width: 200px;
+	
+	img {
+		cursor: pointer;
+		width: 200px;
+		height: 200px;
+		object-fit: cover;
+	}
+	
+	.camera-button {
+		position: absolute;
+		right: 0;
+		bottom: 0;
+	}
+	
+	.delete-button {
+    	position: absolute;
+    	right: 31px;
+    	bottom: 0;
+	}
+	
+	.ui-fileupload {
+		display: none;
+	}
+}
+
 .layout-wrapper {
 	.layout-topbar {
 		 .topbar-menu {
