--- a/src/main/sass/overrides/_theme_styles.scss
+++ b/src/main/sass/overrides/_theme_styles.scss
@@ -1,1 +1,21 @@
-/* Add your customizations of theme here */
+body .ui-datatable {
+	.ui-datatable-data { 
+		tr {
+			td {
+    			padding: 1rem 1rem;
+			}
+		}
+	}
+	table {
+		table-layout: auto;
+	
+		tbody{
+			tr{
+				a{
+					display:flex;
+					align-items: center;
+				}
+			}
+		}
+	}
+}
