--- a/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -9,7 +9,7 @@
 		<div class="menu-scroll-content">
 			<h:form id="menuform">
 				<po:menu widgetVar="RomaMenuWidget">
-					<p:menuitem id="om_users" value="#{i18n['menu.users']}" icon="fa fa-fw fa-users" outcome="/users" />
+					<p:menuitem id="om_users" value="#{i18n['menu.users']}" icon="fa fa-fw fa-users" outcome="/user/search" />
 				</po:menu>
 			</h:form>
 		</div>
