--- a/src/main/webapp/WEB-INF/templates/topbar.xhtml
+++ b/src/main/webapp/WEB-INF/templates/topbar.xhtml
@@ -29,7 +29,7 @@
 					</div>
 				</p:commandLink>
 				<p:menu overlay="true" trigger="dynaButton" my="left top" at="left bottom" styleClass="topbar-menu">
-					<p:menuitem value="#{i18n['config.config']}" outcome="config" />
+					<p:menuitem value="#{i18n['config.config']}" outcome="/config" />
 					<p:menuitem value="#{i18n['login.logout']}" action="#{logoutView.logout}" />
 				</p:menu>
 			</h:form>
