--- a/src/main/webapp/resources/components/avatar.xhtml
+++ b/src/main/webapp/resources/components/avatar.xhtml
@@ -13,7 +13,7 @@
 	<composite:interface>
 		<composite:attribute name="value" 		required="true"		type="es.nivel36.laie.user.UserDto"	/>
 		<composite:attribute name="styleClass" 	required="false" 	default="" 							/>
-		<composite:attribute name="size" 		required="false" 	default="large" 					/>
+		<composite:attribute name="size" 		required="false" 										/>
 	</composite:interface>
 
 	<composite:implementation>
