--- a/src/main/sass/overrides/_layout_styles.scss
+++ b/src/main/sass/overrides/_layout_styles.scss
@@ -3,7 +3,7 @@
 	padding: 0;
 
 	.card-header{
-		height: 80px;
+		height: 8rem;
 		overflow: hidden;
 		background: linear-gradient(30deg, $primaryColor 0%, $primaryLightColor 150%);
 		background-color: $primaryColor;
@@ -13,8 +13,8 @@
 	.user-card-content {
 		
 		.label-container {
-			font-size: 0.8em;
-			padding-bottom: 0.3em;
+			font-size: 1rem;
+			padding-bottom: 0.3rem;
 		
 			.label {
 				color: $darkMenuBgColor;
@@ -22,38 +22,27 @@
 		}
 		
 		.text {
+			font-size: 1.2rem;
 			color: $menuitemTextColor;
 		}
 		
 		.user-image {
-			width: 80px;
-			height: 80px;
-			margin: -40px 0 0 24px;
-			border-radius: 50%;
+			margin: -2rem 0 0 1.5rem;
 			object-fit: cover;
 		}
 		
 		.user-card-name {
-			font-size: 13px;
+			font-size: 1.25rem;
 			color: $primaryTextColor;
 			position: relative;
-			top: -65px;
-			margin-left: 120px;
-			font-weight: 700;
-			white-space: nowrap;
-		}
-		
-		.user-card-role {
-			font-size: 13px;
-			position: relative;
-			top: -55px;
-			margin-left: 120px;
+			top: -4rem;
+			margin-left: 7rem;
 			font-weight: 700;
 			white-space: nowrap;
 		}
 		
 		.user-detail {
-			padding: 0 2.5em 2em 2.5em;
+			padding: 0 2.5rem 2rem 2.5rem;
 		}
 	}
 }
@@ -100,17 +89,17 @@
 			.layout-profile-userinfo {
 	            text-align: left;
 	            display: inline-block;
-	            margin: 6px 0 0 8px;
+	            margin: 0.5rem 0 0 0.6rem;
 	            vertical-align: top;
 	
 	            .layout-profile-name {
-	              font-size: 14px;
+	              font-size: 1.1rem;
 	              display: block;
 	            }
 	
 	            .layout-profile-role {
-	              font-size: 12px;
-	              margin-top: 2px;
+	              font-size: 0.9rem;
+	              margin-top: 0.15rem;
 	              display: block;
 	            }
 			}
